--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ dist/
 
 # Local configuration
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
